--- a/icover.html
+++ b/icover.html
@@ -44,7 +44,7 @@ License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https:/
 
 <br><br><br>
 
-<center><em>"To Dad"</em></center>
+<center>To Father & Mother</em></center>
 <br>
 <br>
 		    <br><br><br><br><br><br><br><br><br>
