--- a/contents.html
+++ b/contents.html
@@ -13,8 +13,9 @@
 
         <section class="open-book">
             <header>
-                <h1><a href='icover.html'>The Art of 9 &#215 9 Go</h1>
-                <h6>Superhuman Edition</h6></a>
+                <h1>The Art of 9 &#215 9 Go</h1>
+                <h6>Superhuman Edition</h6>
+		    <a href='icover.html'>[Cover]</a>a>
             </header>
             <article>
                 <h2 class="chapter-title">Contents</h2></article>
