--- a/contents.html
+++ b/contents.html
@@ -15,12 +15,18 @@
             <header>
                 <h1>The Art of 9 &#215 9 Go</h1>
                 <h6>Superhuman Edition</h6>
-		    <a href='icover.html'>[Cover]</a>a>
             </header>
             <article>
                 <h2 class="chapter-title">Contents</h2></article>
                
 <ol class="toc-list" role="list">
+    <li>
+        <a href="icover.html">
+            <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COVER<span class="leaders" aria-hidden="true"></span></span> <span
+                data-href="icover.html" class="page"><span class="visually-hidden">Page&nbsp;</span>i</span>
+        </a>
+      </li>
+
     <li>
         <a href="preface.html">
             <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PREFACE<span class="leaders" aria-hidden="true"></span></span> <span
