--- a/contents.html
+++ b/contents.html
@@ -263,6 +263,13 @@
                             class="visually-hidden">Page&nbsp;</span>49</span>
                 </a>
             </li>
+        <li>
+                <a href="goodMove.html">
+                    <span class="title">A Good Move at the Opening<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="goodMove.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>51</span>
+                </a>
+            </li>
 
         </ol>
     </li>
@@ -270,7 +277,7 @@
         <a href="#Unhandled-Rejection-Tracking">
             <span class="title">5. Superhuman Review<span class="leaders" aria-hidden="true"></span></span>
             <span data-href="#Unhandled-Rejection-Tracking" class="page"><span
-                    class="visually-hidden">Page&nbsp;</span><Span class='b'>51</span></span>
+                    class="visually-hidden">Page&nbsp;</span><Span class='b'>53</span></span>
         </a>
         <ol role="list">
 
@@ -356,7 +363,7 @@
                             class="visually-hidden">Page&nbsp;</span>109</span>
                 </a>
             </li>
-
+    
         </ol>
     </li>
 </ol>
