--- a/contents.html
+++ b/contents.html
@@ -363,6 +363,14 @@
                             class="visually-hidden">Page&nbsp;</span>109</span>
                 </a>
             </li>
+         <li>
+                <a href="algorithms.html">
+                    <span class="title">Game Algorithms<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="sfgToWgo.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>111</span>
+                </a>
+            </li>
+   
     
         </ol>
     </li>
