--- a/icover.html
+++ b/icover.html
@@ -15,16 +15,15 @@
             <article>
 
 <span class='part'style='letter-spacing:5px'>THE ART OF 9 &#215; 9 G0<br></span>
-<em>Superhuman Edition</em><br><br><br>
+<em>Superhuman Edition</em><br><br><br><br>
 
 
 by<br>
-<strong>Monteo da Westi &<br>
-A Master of Go</strong>
+<strong>Monteo da Westi</strong> 
 
 <br><br><br>
 Published by<br> 
-The World Go Academy<br>
+The M. P. Scriptorium<br>
 9 x 9 Go Repository<br>
 <a href='https://9x9go.github.io/superhuman'>https://9x9go.github.io/superhuman</a>
 
@@ -33,23 +32,22 @@ Copyright &copy; 2023 Monteo da Westi<br>
 All rights reserved. No part of this work may be reproduced,
 distributed, or transmitted in any form or by any means, including photocopying, recording, 
 or other electronic or mechanical methods, without the prior written permission of 
-the first author. For permission requests, write to monteodawesti@gmail.com <br><br>
+the author. For permission requests, write to monteodawesti@gmail.com <br><br>
 
 License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https://www.github.io/9x9go/superhuman</a>
    
 </font>
 
 
- <h2 class="chapter-title">WGA</h2>
+ <h2 class="chapter-title">MPS</h2>
 
 <br><br><br>
 
-<center>To Father & Mother</em></center>
+<center>To MPS founders</em></center>
 <br>
 <br>
-		    <br><br><br><br><br><br><br><br><br>
+		    <br><br><br><br>
 <p>
-<sup>Click.</a>
 <br><br><p align='center'><a href='contents.html'>[Contents]</a></p>
 </p>
  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
