--- a/icover.html
+++ b/icover.html
@@ -23,12 +23,12 @@ by<br>
 
 <br><br><br>
 Published by<br> 
-The M. P. Scriptorium<br>
+M. P. Scripts<br>
 9 x 9 Go Repository<br>
 <a href='https://9x9go.github.io/superhuman'>https://9x9go.github.io/superhuman</a>
 
 <br><br><br><br><br><br><br><br><br><font size='-1'>
-Copyright &copy; 2023 Monteo da Westi<br>
+Copyright &copy; 2023-present by Monteo da Westi<br>
 All rights reserved. No part of this work may be reproduced,
 distributed, or transmitted in any form or by any means, including photocopying, recording, 
 or other electronic or mechanical methods, without the prior written permission of 
@@ -43,13 +43,13 @@ License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https:/
 
 <br><br><br>
 
-<center>To MPS founders</em></center>
+<center></center>
 <br>
 <br>
 		    <br><br><br><br>
-<p>
-<br><br><p align='center'><a href='contents.html'>[Contents]</a></p>
-</p>
+<dd>
+<br><br><center><a href='contents.html'>[Contents]</a></center>
+</dd>
  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </article>
 <!---------------next page-->
