--- a/contents.html
+++ b/contents.html
@@ -370,6 +370,13 @@
                             class="visually-hidden">Page&nbsp;</span>111</span>
                 </a>
             </li>
+         <li>
+                <a href="diagram/flowchart/reading.html">
+                    <span class="title">Board Reading<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="diagram/flowchart/reading.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>113</span>
+                </a>
+            </li>
    
     
         </ol>
