--- a/diagram/flowchart/reading.html
+++ b/diagram/flowchart/reading.html
@@ -41,9 +41,9 @@
 <!Chapter title>
     	<h2 class="chapter-title">Board Reading</h2>
 
-<p>One of the most important and most difficult skill to master is board reading. You need both the right thinking steps and the right understanding of Go concepts applied to each step. </p>
+<p>One of the most difficult skill to master is board reading. You need to have the right thinking steps and the true understanding of Go concepts applied to each step. </p>
 
-<p>First, the board shoud be observed by looking at on all stones on the board, not just the last move. Second, the sitution should be anlayzed by identifying the advantages, problems, risks, and opportunities of both yours and your opponent's. Third, prioritize your problems. Fourth, find some good moves to deal with them. Fifth, visualize the move sequence from each good move option and try to foresee its impacts on the advantages, problems, risks, and opportunities in the far future. Sixth, trade off such impacts and select the most effective move. </p><p>We need to understand the concepts of current situation assessment, move sequence visualization, move-sequence impact evaluation, and best-move selection.
+<p>First, the game shoud be observed by focusing on all stones on the board, not on merely the previous move. Second, the board situation should be anlayzed by characterizing all of its major aspects: the strength, weakness, risk, and opportunity of both yours and your opponent's. Third, prioritize your problems. Fourth, have good move options in place, based on your knowledge, which comes from your experience. Fifth, visualize the move sequence that proceeds from each good move option, and evaluate its impacts on the game situation in the far future (on your long-term rewards, not just the immediate short-term gain). Sixth, trade off such impacts and select the most effective and efficient move. </p><p>This is board reading: situation assessment, move visualization, impact evaluation, and best move selection.
 </p>
 
 <div id="chart">
